[package]
name = "zksl-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"

[[bin]]
name = "prover"
path = "src/main.rs"


